🍬🐒 Checkpoint ./views/product-claims.ejs:10221761/1339 ./routes/api.js:10221761/410

--- a/views/product-claims.ejs
+++ b/views/product-claims.ejs
@@ -54,10 +54,10 @@
             <li><a href="#">Resolve</a></li>
             <%}%>
             <% if (result.status==='Closed') { %> <!--  add Re-open dropdown option if condition   -->
-            <li><a href="">Re-open</a></li>
+            <li><a onclick="openClaim('<%result.claimid%>')">Re-open</a></li>
             <%}%>
             <% if (result.resolution!='unresolved' & result.status==='Open' ) {%> <!--  add Close dropdown option if condition   -->
-            <li><a href="#">Close</a></li>
+            <li><a onclick="closeClaim('<%result.claimid%>')">Close</a></li>
             <%}%>
             <li><a href='/edit/<%=result.claimid%>'>Edit Claim</a></li>  <!--  add Edit dropdown option  -->
           </ul>
@@ -75,3 +75,42 @@
   </tbody>
 </table>
 <% } %>
+
+
+<script>
+
+function closeClaim(id){
+    fetch('https://ejs-views-practice.glitch.me/api/claims/update', {
+        headers:{
+          "content-type":"application/json",
+        },
+        body: JSON.stringify({
+          claimid: id
+        }),
+        method: 'POST'
+    }).then(resp=>{
+       window.location.reload();//so changes render
+    }, err=>{
+      console.log(err);
+    })
+  }
+}
+
+function oppenClaim(id){
+    fetch('https://ejs-views-practice.glitch.me/api/claims/update', {
+        headers:{
+          "content-type":"application/json",
+        },
+        body: JSON.stringify({
+          claimid: id
+        }),
+        method: 'POST'
+    }).then(resp=>{
+       window.location.reload();//so changes render
+    }, err=>{
+      console.log(err);
+    })
+  }
+}
+
+</script>
