✈️🚏 Checkpoint ./routes/api.js:10221761/120 ./views/product-claims.ejs:10221761/375

--- a/views/product-claims.ejs
+++ b/views/product-claims.ejs
@@ -54,10 +54,10 @@
             <li><a href="#">Resolve</a></li>
             <%}%>
             <% if (result.status==='Closed') { %> <!--  add Re-open dropdown option if condition   -->
-            <li><a onclick="openClaim('<%result.claimid%>')">Re-open</a></li>
+            <li><a id="myLink" href="#" onclick="openClaim(<%=result.claimid%>)">Re-open</a></li>
             <%}%>
             <% if (result.resolution!='unresolved' & result.status==='Open' ) {%> <!--  add Close dropdown option if condition   -->
-            <li><a onclick="closeClaim('<%result.claimid%>')">Close</a></li>
+            <li><a href="#" onclick="closeClaim('<%=result.claimid%>')">Close</a></li>
             <%}%>
             <li><a href='/edit/<%=result.claimid%>'>Edit Claim</a></li>  <!--  add Edit dropdown option  -->
           </ul>
@@ -77,16 +77,17 @@
 <% } %>
 
 
-<script>
+<script type=text/javascript>
 
 function closeClaim(id){
     fetch('https://ejs-views-practice.glitch.me/api/claims/update', {
         headers:{
           "content-type":"application/json",
         },
-        body: JSON.stringify({
-          claimid: id
-        }),
+        body: {
+          claimid: id,
+          status: "Closed"
+        },
         method: 'POST'
     }).then(resp=>{
        window.location.reload();//so changes render
@@ -94,15 +95,15 @@ function closeClaim(id){
       console.log(err);
     })
   }
-}
 
-function oppenClaim(id){
+function openClaim(id){
     fetch('https://ejs-views-practice.glitch.me/api/claims/update', {
         headers:{
           "content-type":"application/json",
         },
         body: JSON.stringify({
-          claimid: id
+          claimid: id,
+          status: "Open"
         }),
         method: 'POST'
     }).then(resp=>{
@@ -111,6 +112,6 @@ function oppenClaim(id){
       console.log(err);
     })
   }
-}
+
 
 </script>
