🐴😹 Checkpoint ./views/claims.ejs:10221761/26 ./views/products.ejs:10221761/204 ./views/product-claims.ejs:10221761/331

--- a/views/claims.ejs
+++ b/views/claims.ejs
@@ -5,7 +5,7 @@
 <h1>
   Claims
 </h1>
-create claims, edit and resolve claims, filter and sort claims
+Goals for this page: create claims, edit and resolve claims, filter and sort claims ✓ 
 <%- include("partials/claim-edit") %>
 
 <div id="addFilter">
