--- a/views/product-claims.ejs
+++ b/views/product-claims.ejs
@@ -6,7 +6,7 @@
   <h1>
     <%=claims[0].product%> Claims
   </h1>
-
+  Goals for this page: Re-open a closed claim ✓, close a claim if theres a resolution attached ✓, allow updates to mutable fields by redirecting to edit page✓ 
   <div class="dropdown"> <!-- dropdown is a bootstrap class p sure, so is dropdown menu-->
     <b>Sort by:</b>
     <% if (locals.sort) { %>
