🔋🍴 Checkpoint ./views/employees.ejs:10221761/185 ./views/partials/claim-edit.ejs:10221761/193 ./views/customers.ejs:10221761/178

--- a/views/employees.ejs
+++ b/views/employees.ejs
@@ -6,7 +6,7 @@
 <h1>
   Employees
 </h1>
-create employee
+  Goals for this page: sort employees ✓, view employee information with modal, edit employee information, delete employee, create employee
 
   <div class="dropdown"> <!-- dropdown is a bootstrap class p sure, so is dropdown menu-->
     <b>Sort by:</b>
