--- a/views/partials/claim-edit.ejs
+++ b/views/partials/claim-edit.ejs
@@ -6,6 +6,7 @@
 <h2>
   Edit Claim
 </h2>
+Goals for this page: POST changes to appropriate places in db upon submission 
 <form id="updateform" onsubmit="update(this);">  
   <div><b>Customer: </b><%=result.customer%></div>
  
