--- a/views/customers.ejs
+++ b/views/customers.ejs
@@ -47,12 +47,17 @@
   <div class="modal-content">
     <span class="close">&times;</span><!-- close button -->
     <div class="d-flex justify-content-center flex-column">
-      <h2 id="name" >Product Name</h2>
-      <p id="description">Product description</p>
-      <form id="claimsBtn" method="get">
-        <button type="submit" id="claims">View Claims for this product</button>  <!-- need button to be in a form to later redirect by setting form's action in javascript below -->
-      </form>
-     <p id="noclaims">No claims for this product</p> <!-- displays if button above is not (controlled in javascript below) -->
+      <form id="updateform" onsubmit="update(this);">  
+ 
+      <div>
+        <b>First Name: </b>
+        <input value="" id="description" name="description" type="text" >
+      </div>
+
+
+
+      <input type="submit">
+    </form>
     </div>
   </div>
 </div>
@@ -66,7 +71,7 @@
     // var productid=element.name.split(";")[1];
     // var description=element.name.split(";")[0];
     var modal = document.getElementById("descriptionModal"); 
-    // var closeBtn = document.getElementsByClassName("close")[0];
+    var closeBtn = document.getElementsByClassName("close")[0];
 
     
     // fetch('https://ejs-views-practice.glitch.me/api/claims/products/'+element.name.split(";")[1])
