🦁🚋 Checkpoint ./views/customers.ejs:10221761/88 ./routes/api.js:10221761/4135

--- a/views/customers.ejs
+++ b/views/customers.ejs
@@ -101,10 +101,9 @@
           streetaddress2:document.getElementById("address2").value,
           zip:document.getElementById("zip").value,
           email:document.getElementById("email").value,
-          firstname:document.getElementById("state").value,
-          lastname:document.getElementById("state").value,
-          phone:document.getElementById("state").value,
-          title:document.getElementById("state").value
+          firstname:document.getElementById("firstname").value,
+          lastname:document.getElementById("lastname").value,
+          phone:document.getElementById("phone").value
         }),
             method: 'POST'
         }).then(resp=>{
